# axum-bingo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  build.rs  package.json
deploy/: docker-compose.yml
npm/: package-lock.json  package.json  tailwind.config.js
src/: main.rs  templates.rs
src/endpoints/: endpoints.rs
templates/: base.html  index.html
