[package]
name = "axum-bingo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["serde", "serde-json"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["http2", "tokio", "http1", "json"] }
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
http = "1.1.0"

[build-dependencies]
npm_rs = "1.0.0"